--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -13,7 +13,7 @@ jobs:
           pip install -r requirements-ci.txt
       - name: Sphinx build
         run: |
-          sphinx-build . _build
+          sphinx-build source _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
